--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "name": "node",
   "version": "1.0.0",
   "description": "node.js & express Practice for Backend Study.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
