--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "postgres",
-      "password": "admin",
+      "password": "j2in",
       "database": "postgres",
       "host": "127.0.0.1",
       "dialect": "postgres"
